--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,15 @@
     <string name="msg_Password">Contraseña</string>
     <string name="bt_Login">Ingresar</string>
     <string name="bt_Register">Registarse</string>
+    
+    //Create and Update
+    <string name="msg_Nombre">Nombre del producto</string>
+    <string name="msg_Precio">Precio del producto</string>
+    <string name="msg_Cantidad">Cantidad</string>
+    <string name="msg_Color">Color</string>
+    <string name="mag_Descuento">Descuento</string>
+    <string name="btAgregar">Agregar Producto</string>
+    <string name="btActualizar">Actualizar Producto</string>
 
     <string name="title_activity_principal">PrincipalActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -18,6 +27,4 @@
     <string name="menu_producto">Producto</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
