--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,12 @@
     <string name="btAgregar">Agregar Producto</string>
     <string name="btActualizar">Actualizar Producto</string>
 
+    //Delete
+    <string name="Si">Si</string>
+    <string name="No">No</string>
+    <string name="Delete">Eliminar</string>
+    <string name="msg_Delete">Seguro que desea eliminar el producto: </string>
+
     <string name="title_activity_principal">PrincipalActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
